# heat-equation-pde

./: CMakeLists.txt
include/: heat_solver.hpp  renderer.hpp  shader.hpp
src/: heat_solver.cpp  main.cpp  renderer.cpp  shader.cpp
src/shaders/: fragment.glsl  vertex.glsl
